improved~fixed some spacing issues

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ strong .toa {
 div.content {
   margin: 0px auto;
   padding: 50px;
-  padding-top: 52px;
+  padding-top: 62px;
   max-width: 800px;
   text-align: justify;
   background-image: url("assets/linedpaper.png");
@@ -210,10 +210,16 @@ h2, h3 {
   font-family: Sofia;
 }
 
-#mainaudio, h1 { margin-top: 10px; }
-h1 { font-size: 40px; height: 40px; margin-bottom: 10px; }
-h2 { font-size: 30px; margin-top: 25px; padding-bottom: 20px; }
-h3 { font-size: 20px; padding-top: 5px;  }
+/* Don't use h4 for now */
+h4 {
+  font-size: 400px;
+  color: red;
+}
+
+h1, #mainaudio { margin-bottom: 25px; }
+h1 { font-size: 40px; height: 40px; padding-bottom: 10px; }
+h2 { font-size: 30px; margin-bottom: -5px; }
+h3 { font-size: 20px; padding-top: 5px; margin-top: 25px; }
 
 hr {
   border: 0;
@@ -225,7 +231,7 @@ h2::before, hr::before {
   content: '* * *';
   display: block;
   font-size: 20px;
-  margin: 25px 0;
+  margin-top: 25px;
   text-align: center;
   line-height: 25px;
   color: gray;
